[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "python3-cyberfusion-yavb"
version = "1.1"
description = "Version bumper for software projects."
readme = "README.md"
authors = [
    { name = "Cyberfusion", email = "support@cyberfusion.io" },
]
dependencies = [
  "semver==3.0.4",
  "typer==0.23.1",
  "tomlkit==0.14.0",
]

[project.urls]
"Source" = "https://github.com/CyberfusionIO/python3-cyberfusion-yavb"

[project.scripts]
yavb = "cyberfusion.YAVB:app"
